# ChatApplication

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py  chats.py  messages.py  users.py
backend/app/core/: config.py  dependencies.py  events.py  logger.py  security.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  chat.py  chat_member.py  message.py  user.py
backend/app/db/repositories/: chat_repository.py  message_repository.py  user_repository.py
backend/app/services/: websocket_manager.py
backend/app/tests/: conftest.py  test_auth.py  test_chats.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts  auth.ts
